--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.2.1",
     "axios": "^1.8.4",
     "lucide-react": "^0.344.0",
+    "mammoth": "^1.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.13",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
