Added mime changes in nginx for blank page load

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,12 +12,10 @@ server {
     gzip_min_length 1024;
     gzip_comp_level 5;
 
-    # Try pre-compressed brotli if available (served as static .br files)
-    location ~* \.(js|css)$ {
+    # Static assets with long caching
+    location ~* \.(js|mjs|css|json|wasm|map)$ {
         add_header Cache-Control "public, max-age=31536000, immutable";
-        try_files $uri.br $uri.gz $uri =404;
-        types { }
-        default_type application/octet-stream;
+        try_files $uri =404;
     }
 
     # Cache static assets aggressively
