More nginx changes

--- a/nginx.conf
+++ b/nginx.conf
@@ -6,6 +6,17 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Ensure correct MIME types (guard against missing global mime.types include)
+    types {
+        text/html  html htm shtml;
+        text/css   css;
+        text/javascript  js mjs;
+        application/javascript js mjs;
+        application/json json map;
+        application/wasm wasm;
+        image/svg+xml svg;
+    }
+
     # Compression
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss image/svg+xml;
