--- a/nginx.conf
+++ b/nginx.conf
@@ -6,16 +6,11 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # Ensure correct MIME types (guard against missing global mime.types include)
-    types {
-        text/html  html htm shtml;
-        text/css   css;
-        text/javascript  js mjs;
-        application/javascript js mjs;
-        application/json json map;
-        application/wasm wasm;
-        image/svg+xml svg;
-    }
+    # Load standard MIME types
+    include /etc/nginx/mime.types;
+
+    # Fallback default if unknown
+    default_type application/octet-stream;
 
     # Compression
     gzip on;
